--- a/src/all.scss
+++ b/src/all.scss
@@ -68,5 +68,6 @@ header {
   text-align: center;
 }
 @import './assets/scss/todolist.scss';
+@import './assets/scss/sort_build.scss';
 @import './assets/scss/tic_tac_toe.scss';
 
